--- a/ex3.html
+++ b/ex3.html
@@ -29,11 +29,13 @@
         </h1>
 
         <img onclick="clicPacman()" id="pacman" src="pacman.jpg" alt="">
-        <img id="fantasma" src="ghost.png" alt="">
+        <img onclick="clicFantasma ()" id="fantasma=" src="ghost.png" alt="">
+        
 
         <p>Clics en pacman: <span id="clics-pacman">0</span></p>
-        <p>Clics en fantasma: <span id="clics-fantasma">0</span></p>
+        <p>Clics en fantasma: <span id="clics-fantasma">0</span>
 
+            
     </div>
 
     <script src="ex3.js"></script>
